release 1.1.1-ea (2009-06)
- Fixed issue 314
  https://jersey.dev.java.net/issues/show_bug.cgi?id=314
  Support MessageBodyReader/Writer implementations have declarations as follows:
    @Provider
    public class MyWriter<T> implements MessageBodyWriter<T> { ... }
  namely the type variable T is never resolved and will be resolved to Object
  when instantiated.
- Fixed issue 297
  https://jersey.dev.java.net/issues/show_bug.cgi?id=297
  If a servlet URL mapping is something like "/foo/*" and the request URL
  path is "/foo" then Jersey will consume the request as if the path was "/foo/",
  unless the redirect feature is enabled (see features of ResourceConfig),
  which if the case, then Jersey will return a temporary redirect response to
  the URL with the path "/foo/".
- Fixed issue 295
  https://jersey.dev.java.net/issues/show_bug.cgi?id=295
  Inheritence of Spring annotated classes, using @Component, that are also
  resource classes is now supported, for example:
    @Path("a") @Component
    public static class A {
        @GET public String get() {
            return "a";
        }
    }

    @Path("b") @Component
    public static class B extends A {
        @GET @Override public String get() {
            return "b";
        }
    }
- Fixed issue 285
  https://jersey.dev.java.net/issues/show_bug.cgi?id=285
  A spring configuration file may be declared as a child context in the
  servlet initialization parameters for the case where multiple Spring-based
  servlets are deployed, with different spring-based resource classes, from
  within the same Web application.
- Fixed issue 306
  https://jersey.dev.java.net/issues/show_bug.cgi?id=306
  The support JSONObject and JSONArray should only work for JSON related
  media types, namely "application/json" and "application/<something>+json".
- Fixed issue 154
  https://jersey.dev.java.net/issues/show_bug.cgi?id=154
  The com.sun.jersey.core.provider.EntityHolder type may be utilized as a 