@@ -64,9 +64,9 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>com.sun.xml.stream</groupId>
-            <artifactId>sjsxp</artifactId>
-            <version>1.0.1</version>
+            <groupId>woodstox</groupId>
+            <artifactId>wstx-asl</artifactId>
+            <version>3.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
